@@ -1,0 +1,41 @@
+# $NetBSD: Makefile.common,v 1.1 2004/11/07 21:44:22 jmmv Exp $
+#
+
+DISTNAME=	wistumbler2.00-pre9
+PKGNAME=	${DISTNAME:S/wistumbler/wistumbler-/}
+CATEGORIES=	net
+MASTER_SITES=	ftp://ftp.nopcode.org/prj/wistumbler2/
+
+MAINTAINER=	pancake@phreaker.net
+HOMEPAGE=	http://www.nopcode.org/?t=wistumbler2
+COMMENT=	Fork of original WaveLAN/IEEE network stumbler
+
+DISTINFO_FILE=		${.CURDIR}/../../net/wistumbler2/distinfo
+PATCHDIR=		${.CURDIR}/../../net/wistumbler2/patches
+PLIST_SRC=		${.CURDIR}/../../net/wistumbler2/PLIST
+
+NOT_FOR_PLATFORM=	NetBSD-[01].[012345]*-*
+ONLY_FOR_PLATFORM=	NetBSD-*-* FreeBSD-*-* OpenBSD-*-*
+
+HAS_CONFIGURE=		YES
+MANCOMPRESSED=		YES
+USE_BUILDLINK3=		YES
+USE_PKGINSTALL=		YES
+
+CONFIGURE_ENV+=		PREFIX=${PREFIX}
+
+CONF_FILES=		${PREFIX}/share/examples/wistumbler2/wistumbler2.conf \
+			${PKG_SYSCONFDIR}/wistumbler2.conf
+
+SUBST_CLASSES+=		conf
+SUBST_STAGE.conf=	pre-configure
+SUBST_FILES.conf=	src/userconf.c 
+SUBST_SED.conf=		-e "s|/etc|${PKG_SYSCONFDIR}|g"
+SUBST_MESSAGE.conf=	"Fixing path to configuration files."
+
+post-extract:
+	${CHMOD} ${PKGDIRMODE} ${WRKSRC}/doc
+	${CHMOD} ${PKGDIRMODE} ${WRKSRC}/img
+
+.include "../../net/libpcap/buildlink3.mk"
+.include "../../mk/pthread.buildlink3.mk"
